# sapphire-precompiles

./: .gitmodules  README.md  foundry.toml
src/: BinaryContracts.sol  PrecompileHandler.sol  Precompiles.sol
src/precompiles/: Cargo.toml
src/precompiles/src/: main.rs
test/: TestPrecompiles.t.sol  TestSapphireContracts.t.sol
