[package]
name = "precompiles"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "random_bytes"
path = "src/main.rs"

[[bin]]
name = "x25519_derive"
path = "src/main.rs"

[[bin]]
name = "curve25519_compute_public"
path = "src/main.rs"

[[bin]]
name = "deoxysii_seal"
path = "src/main.rs"

[[bin]]
name = "deoxysii_open"
path = "src/main.rs"

[[bin]]
name = "keypair_generate"
path = "src/main.rs"

[[bin]]
name = "sign"
path = "src/main.rs"

[[bin]]
name = "verify"
path = "src/main.rs"

[dependencies]
ethabi = "18.0"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
x25519-dalek = "=2.0.0-pre.1"
deoxysii = "0.2.4"

[build]
rustflags = ["-C", "target-feature=+aes,+ssse3"]
