[package]
name = "precompiles"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "random_bytes"
path = "src/main.rs"

[[bin]]
name = "x25519_derive"
path = "src/main.rs"

[[bin]]
name = "curve25519_compute_public"
path = "src/main.rs"

[[bin]]
name = "deoxysii_seal"
path = "src/main.rs"

[[bin]]
name = "deoxysii_open"
path = "src/main.rs"

[[bin]]
name = "keypair_generate"
path = "src/main.rs"

[[bin]]
name = "sign"
path = "src/main.rs"

[[bin]]
name = "verify"
path = "src/main.rs"

[dependencies]
ethabi = "18.0"
hex = "0.4"
hmac = "0.12"
once_cell = "1.18"
sha2 = "0.10"
x25519-dalek = "2.0"
rand = "0.8"
oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", package = "oasis-runtime-sdk", branch = "main" }

[build]
rustflags = ["-C", "target-feature=+aes,+ssse3"]
